fix modal scroll on mobiles, fix button white space

--- a/resources/assets/front/sass/components/_buttons.css
+++ b/resources/assets/front/sass/components/_buttons.css
@@ -16,6 +16,7 @@
   text-transform: none;
   border-radius: 5px;
   letter-spacing: normal;
+  white-space: nowrap;
 
   &:hover {
     animation: hover 1200ms linear 2 alternate;
