--- a/resources/assets/front/sass/components/_modal.css
+++ b/resources/assets/front/sass/components/_modal.css
@@ -1,5 +1,7 @@
-body.hasModal {
-  overflow: hidden;
+html.hasModal {
+  &, body {
+    overflow: hidden;
+  }
 }
 
 .modal {
